--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/rodionD-stack/NodeGB#readme",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "dayjs": "^1.10.7",
+    "events": "^3.3.0"
   }
 }
