--- a/lesson5/package.json
+++ b/lesson5/package.json
@@ -2,12 +2,9 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "cliapp.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "reader": "cliapp.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +17,6 @@
   },
   "homepage": "https://github.com/rodionD-stack/NodeGB#readme",
   "dependencies": {
-    "colors": "^1.4.0",
-    "inquirer": "^8.2.0",
-    "yargs": "^17.2.1"
+    "colors": "^1.4.0"
   }
 }
